# ALICE-DNS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README_ja.md  install.sh  update-blocklist.py
.github/workflows/: ci.yml  release.yml
src/: blocklist.rs  bloom.rs  dns.rs  dnssec.rs  dnssec_verify.rs  doh.rs  hotreload.rs  lib.rs  main.rs  nullserver.rs  stats.rs  upstream.rs
