[package]
name = "alice-dns"
version = "0.1.0"
edition = "2021"
authors = ["Moroya Sakamoto"]
description = "ALICE DNS Ad-Blocker — Bloom Filter O(1) domain blocking for Raspberry Pi"
license = "AGPL-3.0"
repository = "https://github.com/ext-sakamoro/ALICE-DNS"
keywords = ["dns", "adblock", "bloom-filter", "raspberry-pi", "privacy"]
categories = ["network-programming", "command-line-utilities"]
publish = false

[lib]
name = "alice_dns"
path = "src/lib.rs"

[[bin]]
name = "alice-dns"
path = "src/main.rs"

[features]
# Feature flags — none enabled by default to keep the binary minimal.
#
# tls:       Enable DNS-over-TLS / HTTPS null server (requires rustls).
#            Activate with: cargo build --features tls
#
# analytics: Enable ALICE-Analytics integration (HLL, CMS, DDSketch).
#            Activate with: cargo build --features analytics
default = []
tls = ["dep:rustls", "dep:rustls-pemfile"]
analytics = []

[dependencies]
# ALICE Ecosystem
alice-cache = { path = "../ALICE-Cache" }

# TLS (HTTPS null server for ad neutralization) — only when `tls` feature is enabled.
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"], optional = true }
rustls-pemfile = { version = "2", optional = true }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
